--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					</label>
 				</div>
         
-				<input type="submit" value="Add todo" />
+				<input type="submit" value="Add todo" id="addTodo"/>
 			</form>
 		</section>
 		<!-- End of New Todo -->
